# agent_hub

./: .gitignore  PLAN.md  README.md  USAGE.md  pyproject.toml  run.sh
backend/app/: config.py  dashboard_focus.applescript  db.py  focus.py  jump.py  main.py  notify.py  orchestrator.py  outline.py  paths.py  security.py  status.py  store.py  templates.py  textutil.py  tmux.py  worktree.py
backend/app/providers/: base.py  claude.py  codex.py  custom.py  ds4.py  ds4_launch.sh  hermes.py  registry.py
backend/app/routes/: pipelines.py  projects.py  sessions.py  state.py
skills/: README.md
skills/pipeline-outline/: SKILL.md
tests/: conftest.py  test_api.py  test_jump.py  test_orchestrator.py  test_paths.py  test_pipelines_api.py  test_providers_status.py  test_resume.py  test_textutil.py  test_tmux_lifecycle.py  test_tmux_names.py
web/: app.js  index.html  styles.css
