[project]
name = "agent-hub"
version = "0.1.0"
description = "Local read-only dashboard for native multi-agent tmux sessions (Hermes / Claude Code / Codex)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
addopts = "-q"
